# serializer version: 1
# name: test_gr_client[query0-baugesuch]
  dict({
    'data': dict({
      'art-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': False,
        'label': 'art-gewaesserschutzbereich',
        'value': 'art-gewaesserschutzbereich-au',
      }),
      'ausserhalb-bauzone': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'ausserhalb-bauzone',
        'value': 'ausserhalb-bauzone-nein',
      }),
      'das-bauvorhaben-befindet-sich-in': dict({
        'hidden': False,
        'label': 'das-bauvorhaben-befindet-sich-in',
        'value': list([
          dict({
            'displayValue': 'gewaesserschutzbereich',
            'value': 'das-bauvorhaben-befindet-sich-in-gewaesserschutzbereich',
          }),
          dict({
            'displayValue': 'archaeologiezone',
            'value': 'das-bauvorhaben-befindet-sich-in-archaeologiezone',
          }),
        ]),
      }),
      'gemeinde': dict({
        'displayValue': 'Chur',
        'hidden': False,
        'label': 'gemeinde',
        'value': '1',
      }),
      'genereller-erschliessungsplan': dict({
        'hidden': False,
        'label': 'genereller-erschliessungsplan',
        'value': 'Fussgängerzone Altstadt, Parkierung Gebiete A',
      }),
      'genereller-gestaltungsplan': dict({
        'hidden': False,
        'label': 'genereller-gestaltungsplan',
        'value': 'Bauten und Anlagen schützenswert, Schutzbereich Altstadt',
      }),
      'gis-map': dict({
        'hidden': True,
        'label': 'gis-map',
        'value': '{"markers": [{"x": 2759870.935699284, "y": 1190699.1389424137}], "geometry": "POINT"}',
      }),
      'grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': False,
        'label': 'grundwasserschutzzone',
        'value': 'grundwasserschutzzone-nicht-betroffen',
      }),
      'kantonsstrassen': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'kantonsstrassen',
        'value': 'kantonsstrassen-nein',
      }),
      'lageranlagen-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': True,
        'label': 'lageranlagen-gewaesserschutzbereich',
        'value': 'lageranlagen-gewaesserschutzbereich-au',
      }),
      'lageranlagen-grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': True,
        'label': 'lageranlagen-grundwasserschutzzone',
        'value': 'lageranlagen-grundwasserschutzzone-nicht-betroffen',
      }),
      'ort-grundstueck': dict({
        'hidden': False,
        'label': 'ort-grundstueck',
        'value': 'Chur',
      }),
      'parzelle': dict({
        'form': 'but-near-attack',
        'hidden': False,
        'label': 'parzelle',
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH676877828654',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '2830',
            }),
          }),
        ]),
      }),
      'street-and-housenumber': dict({
        'hidden': False,
        'label': 'street-and-housenumber',
        'value': 'Hof 19',
      }),
      'waldareal': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'waldareal',
        'value': 'waldareal-nein',
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': 'zonenplan',
        'value': 'Archäologiezone, Zentrumszone Altstadt 2, Keine Gefahrenzone',
      }),
    }),
  })
# ---
# name: test_gr_client[query1-baugesuch]
  dict({
    'data': dict({
      'art-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': False,
        'label': 'art-gewaesserschutzbereich',
        'value': 'art-gewaesserschutzbereich-au',
      }),
      'ausserhalb-bauzone': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'ausserhalb-bauzone',
        'value': 'ausserhalb-bauzone-nein',
      }),
      'das-bauvorhaben-befindet-sich-in': dict({
        'hidden': False,
        'label': 'das-bauvorhaben-befindet-sich-in',
        'value': list([
          dict({
            'displayValue': 'gewaesserschutzbereich',
            'value': 'das-bauvorhaben-befindet-sich-in-gewaesserschutzbereich',
          }),
        ]),
      }),
      'gemeinde': dict({
        'displayValue': 'Roveredo (GR)',
        'hidden': False,
        'label': 'gemeinde',
        'value': '2',
      }),
      'genereller-gestaltungsplan': dict({
        'hidden': False,
        'label': 'genereller-gestaltungsplan',
        'value': 'Linea di allineamento per la strutturazione edilizia',
      }),
      'gis-map': dict({
        'hidden': True,
        'label': 'gis-map',
        'value': '{"markers": [{"x": 2730678.226988568, "y": 1122327.0823116319}], "geometry": "POINT"}',
      }),
      'grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': False,
        'label': 'grundwasserschutzzone',
        'value': 'grundwasserschutzzone-nicht-betroffen',
      }),
      'kantonsstrassen': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'kantonsstrassen',
        'value': 'kantonsstrassen-nein',
      }),
      'lageranlagen-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': True,
        'label': 'lageranlagen-gewaesserschutzbereich',
        'value': 'lageranlagen-gewaesserschutzbereich-au',
      }),
      'lageranlagen-grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': True,
        'label': 'lageranlagen-grundwasserschutzzone',
        'value': 'lageranlagen-grundwasserschutzzone-nicht-betroffen',
      }),
      'ort-grundstueck': dict({
        'hidden': False,
        'label': 'ort-grundstueck',
        'value': 'Roveredo (GR)',
      }),
      'parzelle': dict({
        'form': 'but-near-attack',
        'hidden': False,
        'label': 'parzelle',
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH737679917002',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '3051',
            }),
          }),
        ]),
      }),
      'waldareal': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'waldareal',
        'value': 'waldareal-nein',
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': 'zonenplan',
        'value': 'Nessuna zona di pericolo, Zona residenziale (i.s. 0.7)',
      }),
    }),
  })
# ---
# name: test_gr_client[query10-baugesuch]
  dict({
    'data': dict({
      'art-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': False,
        'label': 'art-gewaesserschutzbereich',
        'value': 'art-gewaesserschutzbereich-au',
      }),
      'das-bauvorhaben-befindet-sich-in': dict({
        'hidden': False,
        'label': 'das-bauvorhaben-befindet-sich-in',
        'value': list([
          dict({
            'displayValue': 'gewaesserschutzbereich',
            'value': 'das-bauvorhaben-befindet-sich-in-gewaesserschutzbereich',
          }),
        ]),
      }),
      'gemeinde': dict({
        'displayValue': 'Chur',
        'hidden': False,
        'label': 'gemeinde',
        'value': '1',
      }),
      'gis-map': dict({
        'hidden': True,
        'label': 'gis-map',
        'value': '{"markers": [{"x": 2757567.75, "y": 1192209.3312499998}], "geometry": "POINT"}',
      }),
      'grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': False,
        'label': 'grundwasserschutzzone',
        'value': 'grundwasserschutzzone-nicht-betroffen',
      }),
      'kantonsstrassen': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'kantonsstrassen',
        'value': 'kantonsstrassen-nein',
      }),
      'lageranlagen-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': True,
        'label': 'lageranlagen-gewaesserschutzbereich',
        'value': 'lageranlagen-gewaesserschutzbereich-au',
      }),
      'lageranlagen-grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': True,
        'label': 'lageranlagen-grundwasserschutzzone',
        'value': 'lageranlagen-grundwasserschutzzone-nicht-betroffen',
      }),
      'ort-grundstueck': dict({
        'hidden': False,
        'label': 'ort-grundstueck',
        'value': 'Haldenstein',
      }),
      'parzelle': dict({
        'form': 'but-near-attack',
        'hidden': False,
        'label': 'parzelle',
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH427965866853',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '31778',
            }),
          }),
        ]),
      }),
      'waldareal': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'waldareal',
        'value': 'waldareal-nein',
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': 'zonenplan',
        'value': 'Gewässerraumzone, Zone übriges Gemeindegebiet (Gewässer), Keine Gefahrenzone',
      }),
    }),
  })
# ---
# name: test_gr_client[query11-baugesuch]
  dict({
    'data': dict({
      'art-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': False,
        'label': 'art-gewaesserschutzbereich',
        'value': 'art-gewaesserschutzbereich-au',
      }),
      'das-bauvorhaben-befindet-sich-in': dict({
        'hidden': False,
        'label': 'das-bauvorhaben-befindet-sich-in',
        'value': list([
          dict({
            'displayValue': 'gefahrenzone',
            'value': 'das-bauvorhaben-befindet-sich-in-gefahrenzone',
          }),
          dict({
            'displayValue': 'gewaesserschutzbereich',
            'value': 'das-bauvorhaben-befindet-sich-in-gewaesserschutzbereich',
          }),
        ]),
      }),
      'gemeinde': dict({
        'displayValue': 'Chur',
        'hidden': False,
        'label': 'gemeinde',
        'value': '1',
      }),
      'genereller-erschliessungsplan': dict({
        'hidden': False,
        'label': 'genereller-erschliessungsplan',
        'value': 'Skatingweg, Fuss- / Radweg Hauptverbindung',
      }),
      'genereller-gestaltungsplan': dict({
        'hidden': False,
        'label': 'genereller-gestaltungsplan',
        'value': 'Gewässerabstandslinien, Baumreihe, einseitig',
      }),
      'gis-map': dict({
        'hidden': True,
        'label': 'gis-map',
        'value': '{"markers": [{"x": 2757771.4499999997, "y": 1192182.0312499998}], "geometry": "POINT"}',
      }),
      'grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': False,
        'label': 'grundwasserschutzzone',
        'value': 'grundwasserschutzzone-nicht-betroffen',
      }),
      'kantonsstrassen': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'kantonsstrassen',
        'value': 'kantonsstrassen-nein',
      }),
      'lageranlagen-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': True,
        'label': 'lageranlagen-gewaesserschutzbereich',
        'value': 'lageranlagen-gewaesserschutzbereich-au',
      }),
      'lageranlagen-grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': True,
        'label': 'lageranlagen-grundwasserschutzzone',
        'value': 'lageranlagen-grundwasserschutzzone-nicht-betroffen',
      }),
      'ort-grundstueck': dict({
        'hidden': False,
        'label': 'ort-grundstueck',
        'value': 'Chur',
      }),
      'parzelle': dict({
        'form': 'but-near-attack',
        'hidden': False,
        'label': 'parzelle',
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH546886777384',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '1257',
            }),
          }),
        ]),
      }),
      'waldareal': dict({
        'displayValue': 'waldabstandsbereich',
        'hidden': False,
        'label': 'waldareal',
        'value': 'waldareal-waldabstandsbereich',
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': 'zonenplan',
        'value': 'Statische Waldgrenze gemäss Art. 10/13 Waldgesetz, Gefahrenzone 1, Gewässer',
      }),
    }),
  })
# ---
# name: test_gr_client[query12-baugesuch]
  dict({
    'data': dict({
      'art-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': False,
        'label': 'art-gewaesserschutzbereich',
        'value': 'art-gewaesserschutzbereich-au',
      }),
      'ausserhalb-bauzone': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'ausserhalb-bauzone',
        'value': 'ausserhalb-bauzone-nein',
      }),
      'das-bauvorhaben-befindet-sich-in': dict({
        'hidden': False,
        'label': 'das-bauvorhaben-befindet-sich-in',
        'value': list([
          dict({
            'displayValue': 'gewaesserschutzbereich',
            'value': 'das-bauvorhaben-befindet-sich-in-gewaesserschutzbereich',
          }),
          dict({
            'displayValue': 'archaeologiezone',
            'value': 'das-bauvorhaben-befindet-sich-in-archaeologiezone',
          }),
        ]),
      }),
      'folgeplanung': dict({
        'hidden': False,
        'label': 'folgeplanung',
        'value': 'Quartierplan Welschdörfli 4 (hinweisend), GÜP Welschdörfli West (hinweisend)',
      }),
      'gemeinde': dict({
        'displayValue': 'Chur',
        'hidden': False,
        'label': 'gemeinde',
        'value': '1',
      }),
      'genereller-erschliessungsplan': dict({
        'hidden': False,
        'label': 'genereller-erschliessungsplan',
        'value': 'Parkierung Gebiete B',
      }),
      'genereller-gestaltungsplan': dict({
        'hidden': False,
        'label': 'genereller-gestaltungsplan',
        'value': 'Quartierplan (QP)',
      }),
      'gis-map': dict({
        'hidden': True,
        'label': 'gis-map',
        'value': '{"markers": [{"x": 2759143.4499999997, "y": 1190625.23125}], "geometry": "POINT"}',
      }),
      'grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': False,
        'label': 'grundwasserschutzzone',
        'value': 'grundwasserschutzzone-nicht-betroffen',
      }),
      'kantonsstrassen': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'kantonsstrassen',
        'value': 'kantonsstrassen-nein',
      }),
      'lageranlagen-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': True,
        'label': 'lageranlagen-gewaesserschutzbereich',
        'value': 'lageranlagen-gewaesserschutzbereich-au',
      }),
      'lageranlagen-grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': True,
        'label': 'lageranlagen-grundwasserschutzzone',
        'value': 'lageranlagen-grundwasserschutzzone-nicht-betroffen',
      }),
      'ort-grundstueck': dict({
        'hidden': False,
        'label': 'ort-grundstueck',
        'value': 'Chur',
      }),
      'parzelle': dict({
        'form': 'but-near-attack',
        'hidden': False,
        'label': 'parzelle',
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH776877828620',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '2733',
            }),
          }),
          dict({
            'baurecht-nummer': dict({
              'label': 'baurecht-nummer',
              'value': '12768',
            }),
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH907068848655',
            }),
          }),
        ]),
      }),
      'waldareal': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'waldareal',
        'value': 'waldareal-nein',
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': 'zonenplan',
        'value': 'Archäologiezone, Wohnzone 5, Keine Gefahrenzone',
      }),
    }),
  })
# ---
# name: test_gr_client[query13-baugesuch]
  dict({
    'data': dict({
      'art-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': False,
        'label': 'art-gewaesserschutzbereich',
        'value': 'art-gewaesserschutzbereich-au',
      }),
      'ausserhalb-bauzone': dict({
        'displayValue': 'ja',
        'hidden': False,
        'label': 'ausserhalb-bauzone',
        'value': 'ausserhalb-bauzone-ja',
      }),
      'das-bauvorhaben-befindet-sich-in': dict({
        'hidden': False,
        'label': 'das-bauvorhaben-befindet-sich-in',
        'value': list([
          dict({
            'displayValue': 'gewaesserschutzbereich',
            'value': 'das-bauvorhaben-befindet-sich-in-gewaesserschutzbereich',
          }),
        ]),
      }),
      'gemeinde': dict({
        'displayValue': 'Chur',
        'hidden': False,
        'label': 'gemeinde',
        'value': '1',
      }),
      'genereller-erschliessungsplan': dict({
        'hidden': False,
        'label': 'genereller-erschliessungsplan',
        'value': 'Fuss- / Radweg Nebenverbindung, Forst- und Landwirtschaftsweg',
      }),
      'gis-map': dict({
        'hidden': True,
        'label': 'gis-map',
        'value': '{"markers": [{"x": 2757239.7999999993, "y": 1191422.925}, {"x": 2757141.7999999993, "y": 1191215.725}], "geometry": "LINESTRING"}',
      }),
      'grundwasserschutzzone': dict({
        'displayValue': 's2',
        'hidden': False,
        'label': 'grundwasserschutzzone',
        'value': 'grundwasserschutzzone-s2',
      }),
      'kantonsstrassen': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'kantonsstrassen',
        'value': 'kantonsstrassen-nein',
      }),
      'lageranlagen-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': True,
        'label': 'lageranlagen-gewaesserschutzbereich',
        'value': 'lageranlagen-gewaesserschutzbereich-au',
      }),
      'lageranlagen-grundwasserschutzzone': dict({
        'displayValue': 's2',
        'hidden': True,
        'label': 'lageranlagen-grundwasserschutzzone',
        'value': 'lageranlagen-grundwasserschutzzone-s2',
      }),
      'ort-grundstueck': dict({
        'hidden': False,
        'label': 'ort-grundstueck',
        'value': 'Chur',
      }),
      'parzelle': dict({
        'form': 'but-near-attack',
        'hidden': False,
        'label': 'parzelle',
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH916888867745',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '1844',
            }),
          }),
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH738677680776',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '4308',
            }),
          }),
        ]),
      }),
      'waldareal': dict({
        'displayValue': 'ja',
        'hidden': False,
        'label': 'waldareal',
        'value': 'waldareal-ja',
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': 'zonenplan',
        'value': 'Grundwasser- und Quellschutzzone, Wald (orientierend), Übriges Gemeindegebiet, Keine Gefahrenzone',
      }),
    }),
  })
# ---
# name: test_gr_client[query2-bauanzeige]
  dict({
    'data': dict({
      'gemeinde': dict({
        'displayValue': 'Roveredo (GR)',
        'hidden': False,
        'label': 'gemeinde',
        'value': '2',
      }),
      'genereller-gestaltungsplan': dict({
        'hidden': False,
        'label': 'genereller-gestaltungsplan',
        'value': 'Linea di allineamento per la strutturazione edilizia',
      }),
      'gis-map': dict({
        'hidden': True,
        'label': 'gis-map',
        'value': '{"markers": [{"x": 2730678.226988568, "y": 1122327.0823116319}], "geometry": "POINT"}',
      }),
      'ort-grundstueck': dict({
        'hidden': False,
        'label': 'ort-grundstueck',
        'value': 'Roveredo (GR)',
      }),
      'parzelle': dict({
        'form': 'but-near-attack',
        'hidden': False,
        'label': 'parzelle',
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH737679917002',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '3051',
            }),
          }),
        ]),
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': 'zonenplan',
        'value': 'Nessuna zona di pericolo, Zona residenziale (i.s. 0.7)',
      }),
    }),
  })
# ---
# name: test_gr_client[query3-baugesuch]
  dict({
    'data': dict({
      'art-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': False,
        'label': 'art-gewaesserschutzbereich',
        'value': 'art-gewaesserschutzbereich-au',
      }),
      'ausserhalb-bauzone': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'ausserhalb-bauzone',
        'value': 'ausserhalb-bauzone-nein',
      }),
      'das-bauvorhaben-befindet-sich-in': dict({
        'hidden': False,
        'label': 'das-bauvorhaben-befindet-sich-in',
        'value': list([
          dict({
            'displayValue': 'gewaesserschutzbereich',
            'value': 'das-bauvorhaben-befindet-sich-in-gewaesserschutzbereich',
          }),
        ]),
      }),
      'gemeinde': dict({
        'displayValue': 'Roveredo (GR)',
        'hidden': False,
        'label': 'gemeinde',
        'value': '2',
      }),
      'genereller-erschliessungsplan': dict({
        'hidden': False,
        'label': 'genereller-erschliessungsplan',
        'value': 'Percorso pedonale',
      }),
      'gis-map': dict({
        'hidden': True,
        'label': 'gis-map',
        'value': '{"markers": [{"x": 2730686.563711087, "y": 1122237.578980265}, {"x": 2730701.779260571, "y": 1122223.4682885902}], "geometry": "LINESTRING"}',
      }),
      'grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': False,
        'label': 'grundwasserschutzzone',
        'value': 'grundwasserschutzzone-nicht-betroffen',
      }),
      'kantonsstrassen': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'kantonsstrassen',
        'value': 'kantonsstrassen-nein',
      }),
      'lageranlagen-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': True,
        'label': 'lageranlagen-gewaesserschutzbereich',
        'value': 'lageranlagen-gewaesserschutzbereich-au',
      }),
      'lageranlagen-grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': True,
        'label': 'lageranlagen-grundwasserschutzzone',
        'value': 'lageranlagen-grundwasserschutzzone-nicht-betroffen',
      }),
      'ort-grundstueck': dict({
        'hidden': False,
        'label': 'ort-grundstueck',
        'value': 'Roveredo (GR)',
      }),
      'parzelle': dict({
        'form': 'but-near-attack',
        'hidden': False,
        'label': 'parzelle',
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH479178647641',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '921',
            }),
          }),
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH356476789154',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '920',
            }),
          }),
        ]),
      }),
      'street-and-housenumber': dict({
        'hidden': False,
        'label': 'street-and-housenumber',
        'value': "Sant'Antoni 11, 13, 17",
      }),
      'waldareal': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'waldareal',
        'value': 'waldareal-nein',
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': 'zonenplan',
        'value': 'Nessuna zona di pericolo, Zona nucleo di nuova formazione',
      }),
    }),
  })
# ---
# name: test_gr_client[query4-baugesuch]
  dict({
    'data': dict({
      'art-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': False,
        'label': 'art-gewaesserschutzbereich',
        'value': 'art-gewaesserschutzbereich-au',
      }),
      'ausserhalb-bauzone': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'ausserhalb-bauzone',
        'value': 'ausserhalb-bauzone-nein',
      }),
      'das-bauvorhaben-befindet-sich-in': dict({
        'hidden': False,
        'label': 'das-bauvorhaben-befindet-sich-in',
        'value': list([
          dict({
            'displayValue': 'gewaesserschutzbereich',
            'value': 'das-bauvorhaben-befindet-sich-in-gewaesserschutzbereich',
          }),
        ]),
      }),
      'folgeplanung': dict({
        'hidden': False,
        'label': 'folgeplanung',
        'value': 'Baulinie allgemein',
      }),
      'gemeinde': dict({
        'displayValue': 'Chur',
        'hidden': False,
        'label': 'gemeinde',
        'value': '1',
      }),
      'genereller-erschliessungsplan': dict({
        'hidden': False,
        'label': 'genereller-erschliessungsplan',
        'value': 'Fuss- / Radweg Hauptverbindung, Sammelstrasse, Parkierung Gebiete B',
      }),
      'genereller-gestaltungsplan': dict({
        'hidden': False,
        'label': 'genereller-gestaltungsplan',
        'value': 'Baumreihe, einseitig',
      }),
      'gis-map': dict({
        'hidden': True,
        'label': 'gis-map',
        'value': '{"markers": [{"x": 2758821.8885866464, "y": 1191884.7759206274}, {"x": 2758835.689140816, "y": 1191889.2217609326}, {"x": 2758844.747878619, "y": 1191856.4200200567}, {"x": 2758832.507804883, "y": 1191854.8711072344}], "geometry": "POLYGON"}',
      }),
      'grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': False,
        'label': 'grundwasserschutzzone',
        'value': 'grundwasserschutzzone-nicht-betroffen',
      }),
      'kantonsstrassen': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'kantonsstrassen',
        'value': 'kantonsstrassen-nein',
      }),
      'lageranlagen-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': True,
        'label': 'lageranlagen-gewaesserschutzbereich',
        'value': 'lageranlagen-gewaesserschutzbereich-au',
      }),
      'lageranlagen-grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': True,
        'label': 'lageranlagen-grundwasserschutzzone',
        'value': 'lageranlagen-grundwasserschutzzone-nicht-betroffen',
      }),
      'ort-grundstueck': dict({
        'hidden': False,
        'label': 'ort-grundstueck',
        'value': 'Chur',
      }),
      'parzelle': dict({
        'form': 'but-near-attack',
        'hidden': False,
        'label': 'parzelle',
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH827700866871',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '4628',
            }),
          }),
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH846886770055',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '4630',
            }),
          }),
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH898677006887',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '4625',
            }),
          }),
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH807768008655',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '4626',
            }),
          }),
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH838677680049',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '4629',
            }),
          }),
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH880086687762',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '4624',
            }),
          }),
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH816800867795',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '4627',
            }),
          }),
        ]),
      }),
      'street-and-housenumber': dict({
        'hidden': False,
        'label': 'street-and-housenumber',
        'value': 'Scalettastrasse; Alpsteinweg 2',
      }),
      'waldareal': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'waldareal',
        'value': 'waldareal-nein',
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': 'zonenplan',
        'value': 'Wohnzone 2, Keine Gefahrenzone',
      }),
    }),
  })
# ---
# name: test_gr_client[query5-baugesuch]
  dict({
    'data': dict({
      'art-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': False,
        'label': 'art-gewaesserschutzbereich',
        'value': 'art-gewaesserschutzbereich-au',
      }),
      'ausserhalb-bauzone': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'ausserhalb-bauzone',
        'value': 'ausserhalb-bauzone-nein',
      }),
      'das-bauvorhaben-befindet-sich-in': dict({
        'hidden': False,
        'label': 'das-bauvorhaben-befindet-sich-in',
        'value': list([
          dict({
            'displayValue': 'gewaesserschutzbereich',
            'value': 'das-bauvorhaben-befindet-sich-in-gewaesserschutzbereich',
          }),
        ]),
      }),
      'gemeinde': dict({
        'displayValue': 'Roveredo (GR)',
        'hidden': False,
        'label': 'gemeinde',
        'value': '2',
      }),
      'gis-map': dict({
        'hidden': True,
        'label': 'gis-map',
        'value': '{"markers": [{"x": 2731195.9499999997, "y": 1122174.3312499998}], "geometry": "POINT"}',
      }),
      'grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': False,
        'label': 'grundwasserschutzzone',
        'value': 'grundwasserschutzzone-nicht-betroffen',
      }),
      'kantonsstrassen': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'kantonsstrassen',
        'value': 'kantonsstrassen-nein',
      }),
      'lageranlagen-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': True,
        'label': 'lageranlagen-gewaesserschutzbereich',
        'value': 'lageranlagen-gewaesserschutzbereich-au',
      }),
      'lageranlagen-grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': True,
        'label': 'lageranlagen-grundwasserschutzzone',
        'value': 'lageranlagen-grundwasserschutzzone-nicht-betroffen',
      }),
      'ort-grundstueck': dict({
        'hidden': False,
        'label': 'ort-grundstueck',
        'value': 'Roveredo (GR)',
      }),
      'parzelle': dict({
        'form': 'but-near-attack',
        'hidden': False,
        'label': 'parzelle',
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH786876917826',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '493',
            }),
          }),
          dict({
            'baurecht-nummer': dict({
              'label': 'baurecht-nummer',
              'value': '544',
            }),
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH837678916876',
            }),
          }),
        ]),
      }),
      'street-and-housenumber': dict({
        'hidden': False,
        'label': 'street-and-housenumber',
        'value': 'Véra 10, 12',
      }),
      'waldareal': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'waldareal',
        'value': 'waldareal-nein',
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': 'zonenplan',
        'value': 'Nessuna zona di pericolo, Zona per edifici pubblici (GdS III)',
      }),
    }),
  })
# ---
# name: test_gr_client[query6-baugesuch]
  dict({
    'data': dict({
      'ausserhalb-bauzone': dict({
        'displayValue': 'ja',
        'hidden': False,
        'label': 'ausserhalb-bauzone',
        'value': 'ausserhalb-bauzone-ja',
      }),
      'gemeinde': dict({
        'displayValue': 'Chur',
        'hidden': False,
        'label': 'gemeinde',
        'value': '1',
      }),
      'gis-map': dict({
        'hidden': True,
        'label': 'gis-map',
        'value': '{"markers": [{"x": 2758622.7126099495, "y": 1190131.3069476}], "geometry": "POINT"}',
      }),
      'grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': False,
        'label': 'grundwasserschutzzone',
        'value': 'grundwasserschutzzone-nicht-betroffen',
      }),
      'kantonsstrassen': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'kantonsstrassen',
        'value': 'kantonsstrassen-nein',
      }),
      'lageranlagen-grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': True,
        'label': 'lageranlagen-grundwasserschutzzone',
        'value': 'lageranlagen-grundwasserschutzzone-nicht-betroffen',
      }),
      'ort-grundstueck': dict({
        'hidden': False,
        'label': 'ort-grundstueck',
        'value': 'Chur',
      }),
      'parzelle': dict({
        'form': 'but-near-attack',
        'hidden': False,
        'label': 'parzelle',
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH698677986855',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '3479',
            }),
          }),
        ]),
      }),
      'waldareal': dict({
        'displayValue': 'ja',
        'hidden': False,
        'label': 'waldareal',
        'value': 'waldareal-ja',
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': 'zonenplan',
        'value': 'Auf Gefahrenzonen nicht untersuchtes Gebiet (orientierend), Wald (orientierend)',
      }),
    }),
  })
# ---
# name: test_gr_client[query7-baugesuch]
  dict({
    'data': dict({
      'ausserhalb-bauzone': dict({
        'displayValue': 'ja',
        'hidden': False,
        'label': 'ausserhalb-bauzone',
        'value': 'ausserhalb-bauzone-ja',
      }),
      'gemeinde': dict({
        'displayValue': 'Chur',
        'hidden': False,
        'label': 'gemeinde',
        'value': '1',
      }),
      'gis-map': dict({
        'hidden': True,
        'label': 'gis-map',
        'value': '{"markers": [{"x": 2760943.8499999996, "y": 1192035.0312499998}], "geometry": "POINT"}',
      }),
      'grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': False,
        'label': 'grundwasserschutzzone',
        'value': 'grundwasserschutzzone-nicht-betroffen',
      }),
      'kantonsstrassen': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'kantonsstrassen',
        'value': 'kantonsstrassen-nein',
      }),
      'lageranlagen-grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': True,
        'label': 'lageranlagen-grundwasserschutzzone',
        'value': 'lageranlagen-grundwasserschutzzone-nicht-betroffen',
      }),
      'ort-grundstueck': dict({
        'hidden': False,
        'label': 'ort-grundstueck',
        'value': 'Chur',
      }),
      'parzelle': dict({
        'form': 'but-near-attack',
        'hidden': False,
        'label': 'parzelle',
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH416823867724',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '6978',
            }),
          }),
        ]),
      }),
      'waldareal': dict({
        'displayValue': 'waldabstandsbereich',
        'hidden': False,
        'label': 'waldareal',
        'value': 'waldareal-waldabstandsbereich',
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': 'zonenplan',
        'value': 'Landwirtschaftszone, Keine Gefahrenzone',
      }),
    }),
  })
# ---
# name: test_gr_client[query8-baugesuch]
  dict({
    'data': dict({
      'ausserhalb-bauzone': dict({
        'displayValue': 'ja',
        'hidden': False,
        'label': 'ausserhalb-bauzone',
        'value': 'ausserhalb-bauzone-ja',
      }),
      'gemeinde': dict({
        'displayValue': 'Chur',
        'hidden': False,
        'label': 'gemeinde',
        'value': '1',
      }),
      'gis-map': dict({
        'hidden': True,
        'label': 'gis-map',
        'value': '{"markers": [{"x": 2760930.5289222472, "y": 1192035.707010256}, {"x": 2760963.900865463, "y": 1192057.817393839}], "geometry": "LINESTRING"}',
      }),
      'grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': False,
        'label': 'grundwasserschutzzone',
        'value': 'grundwasserschutzzone-nicht-betroffen',
      }),
      'kantonsstrassen': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'kantonsstrassen',
        'value': 'kantonsstrassen-nein',
      }),
      'lageranlagen-grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': True,
        'label': 'lageranlagen-grundwasserschutzzone',
        'value': 'lageranlagen-grundwasserschutzzone-nicht-betroffen',
      }),
      'ort-grundstueck': dict({
        'hidden': False,
        'label': 'ort-grundstueck',
        'value': 'Chur',
      }),
      'parzelle': dict({
        'form': 'but-near-attack',
        'hidden': False,
        'label': 'parzelle',
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH416823867724',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '6978',
            }),
          }),
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH567786689869',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '3476',
            }),
          }),
        ]),
      }),
      'waldareal': dict({
        'displayValue': 'ja',
        'hidden': False,
        'label': 'waldareal',
        'value': 'waldareal-ja',
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': 'zonenplan',
        'value': 'Auf Gefahrenzonen nicht untersuchtes Gebiet (orientierend), Landwirtschaftszone, Wald (orientierend), Keine Gefahrenzone',
      }),
    }),
  })
# ---
# name: test_gr_client[query9-baugesuch]
  dict({
    'data': dict({
      'art-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': False,
        'label': 'art-gewaesserschutzbereich',
        'value': 'art-gewaesserschutzbereich-au',
      }),
      'ausserhalb-bauzone': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'ausserhalb-bauzone',
        'value': 'ausserhalb-bauzone-nein',
      }),
      'das-bauvorhaben-befindet-sich-in': dict({
        'hidden': False,
        'label': 'das-bauvorhaben-befindet-sich-in',
        'value': list([
          dict({
            'displayValue': 'gewaesserschutzbereich',
            'value': 'das-bauvorhaben-befindet-sich-in-gewaesserschutzbereich',
          }),
        ]),
      }),
      'gemeinde': dict({
        'displayValue': 'Chur',
        'hidden': False,
        'label': 'gemeinde',
        'value': '1',
      }),
      'genereller-erschliessungsplan': dict({
        'hidden': False,
        'label': 'genereller-erschliessungsplan',
        'value': 'Bahnlinie SBB/RhB (hinweisend), Fuss- / Radweg Hauptverbindung, Kantonale Verbindungsstrasse (orientierend), Parkierung Gebiete C',
      }),
      'genereller-gestaltungsplan': dict({
        'hidden': False,
        'label': 'genereller-gestaltungsplan',
        'value': 'Mühlbach überdeckt mit gestalterischem Aufwertungspotential',
      }),
      'gis-map': dict({
        'hidden': True,
        'label': 'gis-map',
        'value': '{"markers": [{"x": 2760376.3950000005, "y": 1190000.739375}], "geometry": "POINT"}',
      }),
      'grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': False,
        'label': 'grundwasserschutzzone',
        'value': 'grundwasserschutzzone-nicht-betroffen',
      }),
      'kantonsstrassen': dict({
        'displayValue': 'ja',
        'hidden': False,
        'label': 'kantonsstrassen',
        'value': 'kantonsstrassen-ja',
      }),
      'lageranlagen-gewaesserschutzbereich': dict({
        'displayValue': 'au',
        'hidden': True,
        'label': 'lageranlagen-gewaesserschutzbereich',
        'value': 'lageranlagen-gewaesserschutzbereich-au',
      }),
      'lageranlagen-grundwasserschutzzone': dict({
        'displayValue': 'nicht-betroffen',
        'hidden': True,
        'label': 'lageranlagen-grundwasserschutzzone',
        'value': 'lageranlagen-grundwasserschutzzone-nicht-betroffen',
      }),
      'ort-grundstueck': dict({
        'hidden': False,
        'label': 'ort-grundstueck',
        'value': 'Chur',
      }),
      'parzelle': dict({
        'form': 'but-near-attack',
        'hidden': False,
        'label': 'parzelle',
        'value': list([
          dict({
            'e-grid-nr': dict({
              'label': 'e-grid-nr',
              'value': 'CH946886778137',
            }),
            'parzellennummer': dict({
              'label': 'parzellennummer',
              'value': '2646',
            }),
          }),
        ]),
      }),
      'street-and-housenumber': dict({
        'hidden': False,
        'label': 'street-and-housenumber',
        'value': 'Sandstrasse 57, 59',
      }),
      'waldareal': dict({
        'displayValue': 'nein',
        'hidden': False,
        'label': 'waldareal',
        'value': 'waldareal-nein',
      }),
      'zonenplan': dict({
        'hidden': False,
        'label': 'zonenplan',
        'value': 'Wohnzone 3, Keine Gefahrenzone',
      }),
    }),
  })
# ---
